tests/codegen/fail/unsupported_extern_rust_abi_definition_build.stderr
error: tests/codegen/fail/unsupported_extern_rust_abi_definition_build.ql:1:19: LLVM IR backend foundation only supports `extern "c"` function definitions yet
  extern "rust" pub fn q_add(left: Int, right: Int) -> Int {
                    ^^^^^^^^
